- Introduced more thorough input handling. A central class called InputTranslator is submitted to the input processor of the game, and submits abstract, standardized "game inputs" to input processors for the game. - TODO: Add controller support to this setup, and add some polling based features like input direction.
TODO: introduce java interface for things to be edited, and then a GUI for editing them (this may require some thinking)